--- a/sales.html
+++ b/sales.html
@@ -1,8 +1,43 @@
-<!DOCTYPE html>
 <html>
-<head></head>
-<body>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1>Create New Store</h1>
+    <form id="theForm">
+      <table>
+        <tr>
+          <td><label for="minHourlyCustNumber">Please Enter minimum number of Customer : </label></td>
+          <td><input type="text" name="minHourlyCustNumber" class="field" id = "myElement" /></td>
+        </tr>
+        <tr>
+          <td><label for="maxHourlyCustNumber">Please Enter maximum number of Customer : </label></td>
+          <td><input type="text" name="maxHourlyCustNumber" class="field"  id = "myElement"/></td>
+        </tr>
 
-</body>
-<script src="app.js" charset="utf-8"></script>
+
+        <tr>
+          <td><label for="avgCookiesPerCust">Please enter sales of average cookies per customer: </label></td>
+          <td><input type="text" name="avgCookiesPerCust" class="field" id = "myElement" /></td>
+        </tr>
+
+        <tr>
+          <td><label for="locationOfStore">Please enter location of store</label></td>
+          <td><input type="text" name="locationOfStore" class="field" id = "myLocation" /></td>
+        </tr>
+
+
+        <tr>
+          <td></td>
+          <td style="text-align: leftt;">
+            <input  type="submit" value="Submit your form!" id="submit" />
+          </td>
+        </tr>
+      </table>
+    </form>
+
+  </body>
+  <script src="app.js" charset="utf-8"></script>
 </html>
