--- a/sales.html
+++ b/sales.html
@@ -10,22 +10,22 @@
       <table>
         <tr>
           <td><label for="minHourlyCustNumber">Please Enter minimum number of Customer : </label></td>
-          <td><input type="text" name="minHourlyCustNumber" class="field" id = "myElement" /></td>
+          <td><input type="number" name="minHourlyCustNumber" class="field"  /></td>
         </tr>
         <tr>
           <td><label for="maxHourlyCustNumber">Please Enter maximum number of Customer : </label></td>
-          <td><input type="text" name="maxHourlyCustNumber" class="field"  id = "myElement"/></td>
+          <td><input type="number" name="maxHourlyCustNumber" class="field"  /></td>
         </tr>
 
 
         <tr>
           <td><label for="avgCookiesPerCust">Please enter sales of average cookies per customer: </label></td>
-          <td><input type="text" name="avgCookiesPerCust" class="field" id = "myElement" /></td>
+          <td><input type="number" name="avgCookiesPerCust" class="field" /></td>
         </tr>
 
         <tr>
           <td><label for="locationOfStore">Please enter location of store</label></td>
-          <td><input type="text" name="locationOfStore" class="field" id = "myLocation" /></td>
+          <td><input type="text" name="locationOfStore" class="field"  /></td>
         </tr>
 
 
