--- a/index.html
+++ b/index.html
@@ -10,27 +10,35 @@
   <div class="navHead">
     <h1>Pat's Salmon Cookies</h1>
   </div>
-   <div  class = "salmon">
-    <img src="/Users/boyraz/myGit/cookie-stand/salmon.png">
+  <div class ="fish">
+      <img  id ="family" src="family.jpg"  alt="">
+      <img  id="fish" src="fish.jpg" alt="">
+      <div class ="locations">
+      <h2> ***Locations***</h2>
+      <span>
+        <h3>1st and Pike</h3>
+        <h3>SeaTac Airport </h3>
+        <h3>Seattle Center</h3>
+        <h3>Capitol Hill</h3>
+        <h3>Alki</h3>
+    </span>
+  </div>
+      <img  id="frosted"src="frosted-cookie.jpg" alt="">
   </div>
   <div class ="home">
     <p>Come for cup of coffee and salmon cookies. Feel yourself at home!<p>
   </div>
-  <div class ="bottom">
-  <div class = "locations">
-   <span>
-     <h2>Locations:</h2>
-     <h3>1st and Pike</h3>
-     <h3>SeaTac Airport </h3>
-     <h3>Seattle Center</h3>
-     <h3>Capitol Hill</h3>
-     <h3>Alki</h3>
- </span>
- </div>
+  <div>
+    <img id="salmon" src="salmon.png" alt="">
+  </div>
   <div class ="hours">
   <h2>Hours:</h2>
   <h3>Monday-Friday : 9 am to 11 pm </h3>
   <h3>Saturday-Sunday : 10 am to 6 pm</h3>
+  </div>
+  <div id ="tshirt">
+    <span id ="buy"> Buy ME!</span>
+    <img src="shirt.jpg"  alt="Buy one of our shirts!">
   </div>
   <div class="contact">
     <h2>Contact Us</h2>
