commented out code removed

--- a/sales.html
+++ b/sales.html
@@ -20,7 +20,7 @@
 
         <tr>
           <td><label for="avgCookiesPerCust">Please enter sales of average cookies per customer: </label></td>
-          <td><input type="number" name="avgCookiesPerCust" class="field" required=""/></td>
+          <td><input type="number" name="avgCookiesPerCust" class="field"  step ="0.1"required=""/></td>
         </tr>
 
         <tr>
@@ -31,7 +31,7 @@
 
         <tr>
           <td></td>
-          <td style="text-align: leftt;">
+          <td style="text-align: left;">
             <input  type="submit" value="Submit your form!" id="submit" />
           </td>
         </tr>
