--- a/index.html
+++ b/index.html
@@ -8,11 +8,24 @@
  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
   <div class="navHead">
+    <div class=head>
     <h1>Pat's Salmon Cookies</h1>
   </div>
-  <div class ="fish">
+  <div>
+    <img id="salmon" src="salmon.png" alt="">
+  </div>
+</div>
+  <div class ="family">
       <img  id ="family" src="family.jpg"  alt="">
-      <img  id="fish" src="fish.jpg" alt="">
+  </div>
+    <div class="fishes">
+      <div class="BlueFish">
+        <img  id="fish" src="fish.jpg" alt="">
+      </div>
+      <div class="frosted">
+        <img  id="frosted"src="frosted-cookie.jpg" alt="">
+      </div>
+    </div>
       <div class ="locations">
       <h2> ***Locations***</h2>
       <span>
@@ -22,24 +35,24 @@
         <h3>Capitol Hill</h3>
         <h3>Alki</h3>
     </span>
-  </div>
-      <img  id="frosted"src="frosted-cookie.jpg" alt="">
-  </div>
+
   <div class ="home">
     <p>Come for cup of coffee and salmon cookies. Feel yourself at home!<p>
-  </div>
-  <div>
-    <img id="salmon" src="salmon.png" alt="">
   </div>
   <div class ="hours">
   <h2>Hours:</h2>
   <h3>Monday-Friday : 9 am to 11 pm </h3>
   <h3>Saturday-Sunday : 10 am to 6 pm</h3>
   </div>
+  <div class="buyMe">
   <div id ="tshirt">
     <span id ="buy"> Buy ME!</span>
     <img src="shirt.jpg"  alt="Buy one of our shirts!">
   </div>
+  <div class = "cutter">
+      <img src="cutter.jpeg"  alt="Buy one of our cutter!">
+    </div>
+    </div>
   <div class="contact">
     <h2>Contact Us</h2>
     <span>522 19th Ave. E Seattle, WA 98112<span>
