css part is done

--- a/index.html
+++ b/index.html
@@ -15,50 +15,46 @@
     <img id="salmon" src="salmon.png" alt="">
   </div>
 </div>
-  <div class ="family">
-      <img  id ="family" src="family.jpg"  alt="">
-  </div>
-    <div class="fishes">
+<img  id ="family" src="family.jpg"  alt="">
+<div class ="home">
+   <p>Come for cup of coffee and salmon cookies. Feel yourself at home!<p>
+</div>
+     <div class="fishLocations">
       <div class="BlueFish">
         <img  id="fish" src="fish.jpg" alt="">
       </div>
-      <div class="frosted">
-        <img  id="frosted"src="frosted-cookie.jpg" alt="">
-      </div>
-    </div>
       <div class ="locations">
-      <h2> ***Locations***</h2>
-      <span>
-        <h3>1st and Pike</h3>
-        <h3>SeaTac Airport </h3>
-        <h3>Seattle Center</h3>
-        <h3>Capitol Hill</h3>
-        <h3>Alki</h3>
-    </span>
+          <h2> ***Locations***</h2>
+          <span>
+            <h3>1st and Pike</h3>
+            <h3>SeaTac Airport </h3>
+            <h3>Seattle Center</h3>
+            <h3>Capitol Hill</h3>
+            <h3>Alki</h3>
+          </span>
+      </div>
+      <div class="frosted">
+          <img  id="frosted"src="frosted-cookie.jpg" alt="">
+      </div>
 
-  <div class ="home">
-    <p>Come for cup of coffee and salmon cookies. Feel yourself at home!<p>
-  </div>
-  <div class ="hours">
-  <h2>Hours:</h2>
-  <h3>Monday-Friday : 9 am to 11 pm </h3>
-  <h3>Saturday-Sunday : 10 am to 6 pm</h3>
-  </div>
-  <div class="buyMe">
-  <div id ="tshirt">
-    <span id ="buy"> Buy ME!</span>
-    <img src="shirt.jpg"  alt="Buy one of our shirts!">
-  </div>
-  <div class = "cutter">
-      <img src="cutter.jpeg"  alt="Buy one of our cutter!">
+      <div class = "cutter">
+          <img src="cutter.jpeg"  alt="Buy one of our cutter!">
+        </div>
+     </div>
+
+     <div class="buyMe">
+       <img src="shirt.jpg"  alt="Buy one of our shirts!">
+     </div>
+     <p id="sell"> We sell tshirts and cutters.</p>
+
+      <div class ="hours">
+        <h2>Hours:</h2>
+        <h3>Monday-Friday : 9 am to 11 pm </h3>
+        <h3>Saturday-Sunday : 10 am to 6 pm</h3>
+        <h2>Contact Us</h2>
+        <span>522 19th Ave. E Seattle, WA 98112<span>
+        <span>(206) 735-7970<span>
+        <span>patscookies@gmail.com<span>
     </div>
-    </div>
-  <div class="contact">
-    <h2>Contact Us</h2>
-    <span>522 19th Ave. E Seattle, WA 98112<span>
-    <span>(206) 735-7970<span>
-    <span>patscookies@gmail.com<span>
-  </div>
-</div>
 </body>
 </html>
